--- a/app/src/main/res/layout/cart_row.xml
+++ b/app/src/main/res/layout/cart_row.xml
@@ -54,12 +54,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:minHeight="48dp"
+            android:setVal="@{cartItem.quantity}"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintStart_toEndOf="@+id/textView"
-            app:layout_constraintTop_toTopOf="@+id/textView"            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-            android:setVal="@{cartItem.quantity}"
-            />
+            app:layout_constraintTop_toTopOf="@+id/textView" />
 
 
         <ImageButton
@@ -67,8 +67,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
             android:background="?android:attr/selectableItemBackground"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
             android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/quantitySpinner"
             app:layout_constraintStart_toEndOf="@+id/quantitySpinner"
