--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -34,13 +34,13 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
         <Button
-            android:id="@+id/placeOrderButton"
+            android:id="@+id/CheckOutButton"
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_margin="8dp"
-            android:text="Place Order"
+            android:text="Checkout"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
 
     </LinearLayout>
