shopping cart desc and signing

--- a/app/src/main/res/layout/cart_row.xml
+++ b/app/src/main/res/layout/cart_row.xml
@@ -55,7 +55,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:minHeight="48dp"
-            android:setVal="@{cartItem.quantity}"
+            android:entries="@{cartItem.getQuantityList()}"
+            android:selectedItemPosition="@{cartItem.quantity - 1}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintStart_toEndOf="@+id/textView"
